# commit-guardian

./: README.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml
src/commit_guardian/: __init__.py  cli.py
tests/: test_sanity.py
